--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
             align-items: center;
             height: 70vh;
             position: relative; /* Add relative positioning to the body for absolute positioning of the overlay text */
+	    overflow: hidden;
+
 
         }
         .content-container {
