--- a/index.html
+++ b/index.html
@@ -70,6 +70,10 @@
             margin-top: 0px; /* Adjust the margin to position the image closer to the top */
 
         }
+	.top-image {
+            width: 200px; /* Set the desired width */
+            height: auto;
+        }
         .banner {
             position: fixed;
             top: 50;
@@ -129,7 +133,9 @@
 
         <!-- Replace "your-image.png" with the actual file path or URL of your PNG image -->
         <img src="greg.png" alt="Your Image Description">
+    	<img class="top-image" src="ticket.jpg" alt="Top Image Description">
         
+
         <!-- Add text below the image -->
         <p>Manchester<br>Annual UniRider</p>
 
