--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
             background-color: #9fcce0; /* Light blue background color */
             display: flex;
             flex-direction: column; /* Stack children vertically */
-            justify-content: center;
             align-items: center;
             height: 70vh;
             position: relative; /* Add relative positioning to the body for absolute positioning of the overlay text */
@@ -30,8 +29,8 @@
 
 	.overlay-text {
             position: absolute;
-            top: 55%;
-            left: 22%;
+            top: 76%;
+            left: 22.5%;
             transform: translate(-50%, -50%)rotate(-37deg);
             color: #ffffff; /* White text color */
             font-size: 25px;
@@ -40,43 +39,44 @@
             z-index: -1; /* Set a higher z-index to place it in front of the image */
         }
         .overlay-text:nth-child(7) {
-            top: 12%;
-            left: 78%;
+            top: 35%;
+            left: 76.8%;
         }
 
         .overlay-text:nth-child(3) {
-            top: 34%;
-            left: 78%;
+            top: 55%;
+            left: 77%;
         }
 
         .overlay-text:nth-child(4) {
-            top: 34%;
-            left: 22%;
+            top: 55%;
+            left: 21.2%;
         }
 
         .overlay-text:nth-child(5) {
-            top: 55%;
+            top: 76%;
             left: 78%;
         }
 
         .overlay-text:nth-child(6) {
-            top: 12%;
-            left: 22%;
+            top: 36.5%;
+            left: 20%;
         }
 
         img {
-            max-width: 15%;
+            max-width: 49%;
             height: auto;
             margin-top: 0px; /* Adjust the margin to position the image closer to the top */
 
         }
 	.top-image {
-            max-width: 30%; /* Set the desired width */
+            max-width: 102%; /* Set the desired width */
             height: auto;
 	    z-index: 5;
     	    margin-bottom: 20px;
         }
         .banner {
+	    margin-top:55px
             position: fixed;
             top: 50;
             left: -5%;
@@ -112,7 +112,7 @@
         }
 
 	p {
-            margin-top: 20px; /* Adjust the margin to create space between the image and the text */
+            margin-top: 18px; /* Adjust the margin to create space between the image and the text */
             font-size: 24px; /* Adjust the font size as needed */
             font-weight: 500; /* Make the text bold ,400-700 */
             letter-spacing: 0px; /* Add slight horizontal stretching */
@@ -132,7 +132,7 @@
 </head>
 <body>
     <div class="content-container">
-        <img class="top-image" src="ticket.jpg" alt="Top Image Description">
+        <img class="top-image" src="ticket.jpg" alt="">
         
         <div class="page-container">
             <!-- Replace "your-image.png" with the actual file path or URL of your PNG image -->
@@ -155,6 +155,7 @@
         Countdown Timer: <span id="countdown">20:00</span>
         <div class="color-picker-container">
             Banner Color: <input type="color" id="bannerColorPicker" value="#333" onchange="changeBannerColor()">
+    	    <button onclick="changeBannerColor()">Confirm</button>
         </div>
     </div>
 
@@ -179,7 +180,7 @@
 
         // JavaScript function to change banner color based on the color picker
         function changeBannerColor() {
-            const banner = document.getElementById('banner');
+    	    const banner = document.querySelector('.banner');  // assuming the banner has the class 'banner'
             const colorPicker = document.getElementById('bannerColorPicker');
             banner.style.backgroundColor = colorPicker.value;
         }
