--- a/index.html
+++ b/index.html
@@ -17,6 +17,21 @@
             position: relative;
             overflow: hidden;
         }
+        .input-container {
+            position: fixed;
+            top: 10px;
+            left: 10px;
+            display: flex;
+            align-items: center;
+        }
+
+        #textInput {
+            margin-right: 10px;
+        }
+
+        #updateTextButton {
+            cursor: pointer;
+        }
 
         .color-picker-container {
             position: fixed;
@@ -32,6 +47,9 @@
             z-index: -1; /* Set a higher z-index to place it in front of other elements */
 	    opacity: 0;
 
+        }
+        .confirm-button {
+            cursor: pointer;
         }
 
 
@@ -112,7 +130,7 @@
             width: 140%;
 	    height: 3.5%;
             background-color: #333;
-            color: #fff;
+            color: #000;
             text-align: center;
             padding: 20px;
             z-index: 1000;
@@ -192,7 +210,12 @@
     </div>
 
     <div class="color-picker-container">
-        <input type="color" class="color-picker-button" onchange="changeBannerColor()">
+        <input type="color" class="color-picker-button" id="bannerColorPicker" onchange="changeBannerColor()">
+        <div class="confirm-button" onclick="updateBanner()">Confirm</div>
+    </div>
+
+    <div class="input-container">
+        <input type="text" id="textInput" placeholder="Enter text">
     </div>
 
     <div class="banner">
@@ -219,9 +242,21 @@
             }
         }, 1000);
 
+
+        function updateBanner() {
+            const textInput = document.getElementById('textInput');
+            const changingTextElement = document.getElementById('changingText');
+            const colorPicker = document.getElementById('bannerColorPicker');
+            const banner = document.querySelector('.banner');
+
+            changingTextElement.textContent = textInput.value;
+            banner.style.backgroundColor = colorPicker.value;
+        }
+
+
         // JavaScript function to change banner color based on the color picker
         function changeBannerColor() {
-    	    const banner = document.querySelector('.banner');  // assuming the banner has the class 'banner'
+            const banner = document.querySelector('.banner');
             const colorPicker = document.getElementById('bannerColorPicker');
             banner.style.backgroundColor = colorPicker.value;
         }
