--- a/index.html
+++ b/index.html
@@ -13,25 +13,60 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            height: 100vh;
+            height: 110vh;
             position: relative;
-            overflow: hidden;
+            overflow: auto;
+        }
+        .bubble-container {
+            position: relative;
+            top: 0;
+    	    left: 0;
+            width:9%;
+            height: 0%;
+            overflow: hidden; /* Clip the bubbles within the banner */
+	    z-index: 2000;
+        }
+        .bubble {
+            background-color: rgba(255, 255, 255, 0.5);
+            border-radius: 50%;
+            position: absolute;
+            animation: floatBubble 6s linear infinite;
+        }
+
+        @keyframes floatBubble {
+            0% {
+                transform: translateY(-30px) translateX(10px);
+            }
+            50% {
+                transform: translateY(20px) translateX(20px);
+            }
+            100% {
+                transform: translateY(-20) translateX(-10);
+            }
         }
         .input-container {
             position: fixed;
-            top: 10px;
-            left: 10px;
+            top: 18px;
+            left: 25px;
             display: flex;
             align-items: center;
-        }
+	    color: #ffffff; 
+	    opacity:0;
 
-        #textInput {
-            margin-right: 10px;
         }
+	.input-container.active {
+    	    opacity: 1;
+	}
 
-        #updateTextButton {
-            cursor: pointer;
-        }
+	.input-text {
+    	    background-color: transparent; /* Set the background color to transparent */
+    	    color: white; /* Set the text color to white */
+    	    border: 0px solid white; /* Add a white border for better visibility */
+    	    padding: 5px; /* Adjust padding for better visual appearance */
+	}
+
+
+
 
         .color-picker-container {
             position: fixed;
@@ -41,16 +76,36 @@
         }
 
         .color-picker-button {
-            width: 50px;
+            width: 60px;
             height: 50px;
             cursor: pointer;
             z-index: -1; /* Set a higher z-index to place it in front of other elements */
 	    opacity: 0;
 
         }
+
+        .confirm-container {
+            position: absolute;
+            top: 50px;
+            right: 100px;
+            display: flex;
+            align-items: center;
+        }
         .confirm-button {
             cursor: pointer;
+            margin-top: 60px; /* Add margin to separate the color picker and the confirm button */
+            width: 200px;
+            height: 200px;
+	    opacity: 0;
         }
+
+	#textInput {
+	    margin-top: 3px;
+    	    margin-right: 10px;
+    	    font-size: 25px; /* Adjust the font size as needed */
+	    opacity: 0.5;
+	    width:100px;
+	}
 
 
         .content-container {
@@ -128,12 +183,13 @@
             top: 50px;
             left: -5%;
             width: 140%;
-	    height: 3.5%;
+	    height: 30px;
             background-color: #333;
             color: #000;
             text-align: center;
             padding: 20px;
             z-index: 1000;
+            overflow: hidden ;
             animation: rotateBanner 10s linear infinite, countdown 1200s linear forwards;
         }
         #countdown, #changingText {
@@ -142,7 +198,7 @@
             left: 50%;
             transform: translate(-50%, -50%);
             font-size: 30px;
-
+	    z-index:1001
 
         }
 
@@ -177,10 +233,11 @@
     </style>
 </head>
 <body>
+
     <div class="content-container">
         <img class="top-image" src="ticket.jpg" alt="">
 
-
+      
 
 
         
@@ -188,6 +245,7 @@
             <!-- Replace "your-image.png" with the actual file path or URL of your PNG image -->
             <img src="greg.png" alt="Your Image Description">
 
+		
             <!-- Add text below the image -->
             <p>Manchester<br>Annual UniRider</p>
 
@@ -208,25 +266,87 @@
 
         </div>
     </div>
+    <div class="confirm-container">
+            <div class="confirm-button" onclick="updateBanner()">Confirm</div>
+    </div>
 
     <div class="color-picker-container">
         <input type="color" class="color-picker-button" id="bannerColorPicker" onchange="changeBannerColor()">
-        <div class="confirm-button" onclick="updateBanner()">Confirm</div>
+
     </div>
 
+
     <div class="input-container">
-        <input type="text" id="textInput" placeholder="Enter text">
+    	<span class="input-prompt"></span>
+	<input type="text" id="textInput" class="input-text" placeholder="Type here...">
     </div>
 
     <div class="banner">
         <span id="countdown">20:00</span>
-        <div class="changing-text" id="changingText">Greg</div>
+        <div class="changing-text" id="changingText">Click top left</div>
+    	<div class="bubble-container">
+        	<!-- Add multiple bubble elements dynamically with JavaScript -->
+    	</div>
     </div>
 
 
 
     </div>
     <script>
+
+
+    // JavaScript code to create and animate translucent white bubbles
+    function createBubble() {
+        const bubble = document.createElement('div');
+        bubble.className = 'bubble';
+
+        // Randomize bubble size between 10px and 40px
+        const size = Math.floor(Math.random() * (60- 8 + 1)) + 10;
+        bubble.style.width = `${size}px`;
+        bubble.style.height = `${size}px`;
+
+        // Randomize bubble position within the banner
+        const banner = document.querySelector('.banner');
+        const positionX = Math.random() * banner.offsetWidth;
+        const positionY = Math.random() * banner.offsetHeight;
+
+        bubble.style.left = `${positionX}px`;
+        bubble.style.top = `${positionY}px`;
+
+        // Randomize bubble opacity between 0.2 and 0.8
+        const opacity = Math.random() * (0.8 - 0.2) + 0.2;
+        bubble.style.opacity = opacity;
+
+        // Set bubble background color to translucent white
+        bubble.style.backgroundColor = `rgba(255, 255, 255, ${opacity})`;
+
+        // Append the bubble to the banner container
+        document.querySelector('.banner').appendChild(bubble);
+    }
+
+    // Function to generate 12 bubbles
+    function generateBubbles() {
+        for (let i = 0; i < 11; i++) {
+            createBubble();
+        }
+    }
+
+    // Call the generateBubbles function
+    generateBubbles();
+
+
+
+
+	const inputContainer = document.querySelector('.input-container');
+	const inputText = document.querySelector('.input-text');
+
+	inputText.addEventListener('focus', () => {
+    	    inputContainer.classList.add('active');
+	});
+
+	inputText.addEventListener('blur', () => {
+    	    inputContainer.classList.remove('active');
+	});
         // JavaScript code to dynamically update countdown timer
         const countdownElement = document.getElementById('countdown');
         let countdownTime = 1200; // 20 minutes in seconds
@@ -273,6 +393,8 @@
             element.style.transition = `opacity ${time / 1000}s`;
             element.style.opacity = 0;
         }
+
+
 
         // Function to toggle between timer and changing text
         function toggleText() {
