--- a/index.html
+++ b/index.html
@@ -115,8 +115,8 @@
 
         .overlay-text {
             position: absolute;
-            top: 76%;
-            left: 22.5%;
+            top: 68%;
+            left: 21.9%;
             transform: translate(-50%, -50%)rotate(-36deg);
             color: #ffffff;
             font-size: 30px;
@@ -127,25 +127,25 @@
 
         .overlay-text:nth-child(7) {
             top: 35%;
-            left: 76.8%;
+            left: 77.2%;
 	    <!--TOP RIGHT-->
         }
 
         .overlay-text:nth-child(3) {
-            top: 55%;
-            left: 77%;
+            top: 52.5%;
+            left: 77.2%;
 	    <!--MIDDLE RIGHT-->
         }
 
         .overlay-text:nth-child(4) {
-            top: 55%;
-            left: 21.2%;
+            top: 52.5%;
+            left: 20.5%;
 	    <!--MIDDLE LEFT-->
         }
 
         .overlay-text:nth-child(5) {
-            top: 76%;
-            left: 78%;
+            top: 69%;
+            left: 77.2%;
 	    <!--BOTTOM RIGHT-->
         }
 
@@ -173,9 +173,18 @@
     	    background-color: #A9A9A9;
     	    margin-top: 35px;
     	    margin-left: 6%; /* Add this line to move the line to the right */
-
-	    
 	}
+
+	.brand-text {
+    	    position: absolute;
+    	    bottom: 7px;
+    	    left: 10%;
+    	    font-size: 20px;
+    	    color: #000; /* Set the color of the brand text */
+    	    font-weight: 500;
+	}
+	    
+
 
         .banner {
             margin-top: 120%;
@@ -198,6 +207,7 @@
             left: 50%;
             transform: translate(-50%, -50%);
             font-size: 30px;
+	    font-weight: 500;
 	    z-index:1001
 
         }
@@ -261,6 +271,7 @@
             <div class="overlay-text">Student</div>
 
 		<div class="line"></div>
+		<div class="brand-text">Davigdor Smooth&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;£330.00</div>
 		<div class="line"></div>
 
 
