--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="theme-color" content="#afd3e3"/>
     <title>Your Website Title</title>
     <style>
         body {
@@ -11,6 +12,7 @@
             padding: 0;
             background: linear-gradient(
               to top,
+              #afd3e3 -10%,
               #afd3e3 0%,
               #afd3e3 90%,
               #181d2a 90%,
