--- a/index.html
+++ b/index.html
@@ -172,7 +172,10 @@
             max-width: 102%;
             height: auto;
 	    z-index: 5;
-    	    margin-bottom: 20px;
+    	    margin-bottom: 15px;
+    	    margin-top: 20px;
+
+
         }
         .spogus-image {
     	    position: absolute;
