--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
 	}
 	.queef-text {
     	    position: absolute;
-    	    bottom: -220px;
+    	    bottom: -230px;
     	    left:9%;
     	    font-size: 14px;
     	    color: #000; /* Set the color of the brand text */
@@ -401,7 +401,7 @@
 		<div class="line"></div>
 		<img class="spogus-image" src="spogus.png" alt="">
 
-		<div class="brand-text">&nbsp;&nbsp;&nbsp;&nbsp;Davigdor Smooth&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;£330.00</div>
+		<div class="brand-text">&nbsp;&nbsp;&nbsp;&nbsp;Davigdor Smooth&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;£330.00</div>
 		<div class="line"></div>
 	
 		<div class="greg-text">Valid from:00:00, 26 Sep 2023</div>
