--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@
         
         <div class="page-container">
             <!-- Replace "your-image.png" with the actual file path or URL of your PNG image -->
-            <img src="greg.png" alt="Your Image Description">
+            <img src="greg1.png" alt="Your Image Description">
 
 		
             <!-- Add text below the image -->
