--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Settings Menu</title>
+    <meta name="theme-color" content="#181d2a"/>
+    <meta name="apple-mobile-web-app-capable" content="yes"> 
+    <title>Poopy Scoopy</title>
     <style>
         body {
 
